[package]
name = "verify-call"
version = "0.2.0"
documentation = "https://docs.rs/verify-call"
repository = "https://github.com/Dennis-Krasnov/Verify-Call"
homepage = "https://github.com/Dennis-Krasnov/Verify-Call"
description = "Utility to verify whether a method has been called on a mock."
categories = ["development-tools::testing", "data-structures", "rust-patterns"]
keywords = ["test", "mock", "spy", "verify"]
license = "MIT"
authors = ["Dennis Krasnov <dennis@krasnov.dev>"]
edition = "2021"
rust-version = "1.56.1"

[dependencies]

[dev-dependencies]
impls = "1.0.3"
